; ModuleID = '/home/carl/AnghaBench/git/extr_ref-filter.c_get_symref.c'
source_filename = "/home/carl/AnghaBench/git/extr_ref-filter.c_get_symref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.used_atom = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.ref_array_item = type { i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.used_atom*, %struct.ref_array_item*)* @get_symref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_symref(%struct.used_atom* %0, %struct.ref_array_item* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.used_atom*, align 8
  %5 = alloca %struct.ref_array_item*, align 8
  store %struct.used_atom* %0, %struct.used_atom** %4, align 8
  store %struct.ref_array_item* %1, %struct.ref_array_item** %5, align 8
  %6 = load %struct.ref_array_item*, %struct.ref_array_item** %5, align 8
  %7 = getelementptr inbounds %struct.ref_array_item, %struct.ref_array_item* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %2
  %11 = call i8* @xstrdup(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  store i8* %11, i8** %3, align 8
  br label %20

12:                                               ; preds = %2
  %13 = load %struct.used_atom*, %struct.used_atom** %4, align 8
  %14 = getelementptr inbounds %struct.used_atom, %struct.used_atom* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load %struct.ref_array_item*, %struct.ref_array_item** %5, align 8
  %17 = getelementptr inbounds %struct.ref_array_item, %struct.ref_array_item* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i8* @show_ref(i32* %15, i32 %18)
  store i8* %19, i8** %3, align 8
  br label %20

20:                                               ; preds = %12, %10
  %21 = load i8*, i8** %3, align 8
  ret i8* %21
}

declare dso_local i8* @xstrdup(i8*) #1

declare dso_local i8* @show_ref(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
